--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,16 @@
     package="com.beletskiy.dartstrainingcalculator">
 
     <application
+        android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher_darts"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_darts_round"
         android:supportsRtl="false"
-        android:theme="@style/DtcTheme"
-        android:allowBackup="true">
-        <activity android:name=".MainActivity">
+        android:theme="@style/DtcTheme">
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
