--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        kotlin_version = "1.4.32"
-        nav_version = "2.3.5"
+        appcompat_version = '1.3.1'
+        constraint_layout_version = '2.1.1'
+        core_ktx_version = "1.6.0"
+        espresso_version = "3.4.0"
+        junit_version = "4.13.2"
+        kotlin_version = '1.5.31'
+        lifecycle_version = "2.3.1"
+        material_version = "1.4.0"
+        navigation_version = "2.3.5"
+        preference_version = "1.1.1"
+        room_version = '2.3.0'
+        test_ext_junit_version = "1.1.3"
     }
+
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
+        classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,7 +31,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
