--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         constraint_layout_version = '2.1.1'
         core_ktx_version = "1.6.0"
         espresso_version = "3.4.0"
+        hilt_version = "2.38.1"
         junit_version = "4.13.2"
         kotlin_version = '1.5.31'
         lifecycle_version = "2.3.1"
@@ -23,6 +24,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
